# lv2-examples

./: .gitignore  COPYING  NEWS  README.md  meson.build  meson_options.txt
.reuse/: dep5
lv2-examples.lv2/: manifest.ttl  meson.build
plugins/: .clang-tidy  meson.build
plugins/eg-fifths.lv2/: fifths.c
plugins/eg-metro.lv2/: metro.c
plugins/eg-midigate.lv2/: midigate.c
plugins/eg-sampler.lv2/: sampler.c
plugins/eg-scope.lv2/: examploscope.c
subprojects/: lv2.wrap
