# Copyright 2021-2025 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

option('docs', type: 'feature',
       description: 'Build documentation')

option('lint', type: 'boolean', value: false, yield: true,
       description: 'Run code quality checks')

option('lv2dir', type: 'string', value: '', yield: true,
       description: 'LV2 bundle installation directory')

option('plugins', type: 'feature', yield: true,
       description: 'Build example plugins')

option('tests', type: 'feature', yield: true,
       description: 'Build tests')

option('title', type: 'string', value: 'LV2 Examples',
       description: 'Project title')
